custom-elements: An element created with 0-length 'is' should be 'undefined' state.

createElement() should accept 0-length 'is' string though
window.customElements.define() doesn't accept it and web authors
can't define such custom elements.

createElement() never finds custom element definition for 0-length 'is'.
So the state of the created elements should be 'undefined'.

https://dom.spec.whatwg.org/#dom-document-createelement
> 3. Let is be the value of the is member of options, or null if no such
> member exists.

https://dom.spec.whatwg.org/#concept-create-element
> 7.3. If namespace is the HTML namespace, and either localName is a
> valid custom element name or is is non-null, then set result’s custom
> element state to "undefined".

The code before this CL incorrectly rejected 0-length 'is' value, and
made the element state 'uncustomized'.
IsEmpty() checks for "is" values should be IsNull().

Bug: 814644
Change-Id: I273f4aa07dd029e483365a9b31586297862a7140
Reviewed-on: https://chromium-review.googlesource.com/930941
Commit-Queue: Kent Tamura <tkent@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538692}
Former-commit-id: 196fc5b6ef0ac459c834b8e6eab3ca1a6a2c1654